# DevOps

./: .gitignore  build.py  conftest.py  pyproject.toml
.experiment/: doc_ast_walk.py
builder/: __init__.py  plugins.py
devops/: api.py  bootstrap.py  cache.py  cli.py  context.py  graph.py  graph_export.py  options.py  plugins.py  registry.py  remote.py  remote_run.py  testing.py  version.py  watch.py  workspace.py
devops/core/: command.py  runner.py  target.py
devops/targets/: _archive_runner.py  _copy_runner.py  _paths.py  _specs.py  archive.py  c_cpp.py  copy.py  custom.py  docs.py  install.py  python.py  script.py  tests.py  zig.py
devops/tools/: clang.py  python_tools.py
docs/: conf.py  index.md
docs/developer_guide/: adding_a_target_type.md  adding_a_tool.md  architecture.md  testing_the_framework.md  writing_a_plugin.md
docs/user_guide/: bootstrap.md  build_py.md  ci_docker.md  cli.md  cross_compile.md  docker_toolchains.md  getting_started.md  graph.md  install.md  remote_refs.md  remote_run.md  scripts.md  target_types.md  testing.md  testrange_tests.md  watch.md
examples/devops-example-tarball/: README.md
examples/devops-example-tarball/devops_example_tarball/: __init__.py
plugins/devops-example-tarball/: README.md  pyproject.toml
plugins/devops-example-tarball/devops_example_tarball/: __init__.py
plugins/devops-testrange/: README.md  pyproject.toml
plugins/devops-testrange/devops_testrange/: __init__.py
plugins/devops-testrange/tests/: test_testrange.py
tests/: conftest.py  test_bootstrap.py  test_cli.py  test_cli_more.py  test_cross_compile.py  test_doc.py  test_flag_composition.py  test_glob.py  test_graph_export.py  test_graph_script.py  test_header_tracking.py  test_install.py  test_multi_target_cache.py  test_plugins.py  test_python_app_more.py  test_python_app_shiv.py  test_python_tools.py  test_ref_as_source.py  test_refs.py  test_remote.py  test_remote_more.py  test_remote_run.py  test_required_tools_doctor.py  test_runner_cache.py  test_script.py  test_targets_archive.py  test_targets_c_cpp.py  test_targets_copy.py  test_targets_custom.py  test_targets_ld.py  test_targets_python_docs.py  test_targets_testrange.py  test_targets_tests.py  test_targets_zig.py  test_targets_zig_test.py  test_tool.py  test_version.py  test_watch.py  test_workspace.py
tests/fixtures/sample_project/: build.py  devops.toml  main.c
tests/fixtures/sample_project/assets/: strings.json
tests/fixtures/sample_project/docs/: conf.py  index.rst
tests/fixtures/sample_project/etc/: myapp.conf
(+18 files in other folders)
